fix overflow

--- a/assets/scss/admin/_upgrade-notice.scss
+++ b/assets/scss/admin/_upgrade-notice.scss
@@ -52,7 +52,7 @@
 		}
 
 		.panel-body {
-			overflow-y: visible;
+			overflow: visible;
 			padding: 0 15px 15px;
 			border-radius: 10px;
 			position: absolute;
